# stocks-api

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: urls.py
config/settings/: base.py  test.py
stocks/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
stocks/migrations/: 0001_initial.py  0002_alter_stock_request_data.py
stocks/services/: marketwatch_service.py  polygon_service.py
stocks/services/aws_lambda/layers/: README.md
stocks/services/aws_lambda/layers/bs4/: Makefile  build.sh
stocks/services/aws_lambda/layers/requests/: Makefile  build.sh
stocks/services/aws_lambda/marketwatch_lambda/: Makefile  README.md  lambda_function.py
stocks/services/aws_lambda/polygon_lambda/: Makefile  README.md  lambda_function.py
stocks/tests/: test_models.py  test_serializers.py  test_services.py  test_views.py
